Removed navbar fixed height
The navbar being a fixed height made the mobile views navbar have overflowing elements, such as the hamburger menu

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,9 +39,9 @@ body {
     background-color: rgba(0, 123, 255, 0.1);
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 }
-.navbar{
+/* .navbar{
     height: 40px;
-}
+} */
 .navbar-brand {
     margin-right: 8px;
 }
